--- a/styles.css
+++ b/styles.css
@@ -1,209 +1,128 @@
 body {
-    font-family: 'Inter', sans-serif;
-    
+    font-family: 'Quicksand', sans-serif;
+    font-size: 17px;
+    line-height: 1.5em;
+    margin: auto;
+    padding: 0;
 }
 
 
-.title {
-    color: green;
-    text-transform: uppercase;
-}
-
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-div {
-    display: block;
-}
-
-.nav {
-    position: fixed;
+img {
     width: 100%;
-    padding-top: 50px;
-    font-weight: 700;
-    font-size: 1.1em;
+    height: auto;
+}
+
+.container {
+    margin: auto;
+}
+
+/* Header */
+
+#main-header {
+    border-bottom: 3px solid #cfbdf3;
     
 }
 
-.nav_elements {
-    display: flex;
-    flex-direction: row;
-    float: right;
-    font-size: 1.2em;
+/* Navbar */
+
+#navbar {
+    text-transform: uppercase;
+    
+    
 }
 
-.nav_elements a {
-    margin-right: 80px;
+#navbar li {
+    display: inline;
+    padding-right: 20px;
+    list-style: none;
+}
+
+#navbar a {
     text-decoration: none;
     color: #000;
 }
 
-.nav_elements a:hover {
-    margin-right: 80px;
-    color: green;
+#navbar li.current a, #navbar a:hover{
+    color: #94ccd6;
+    border-bottom: 2px solid #f69580;
+    padding-bottom: 3px;
 }
 
-.header {
-    margin-top: 100px;
-    margin-left: 100px;
-    padding-bottom: 50px;
+#contact {
+    margin: 80px;
+    font-weight: 700;
 
 }
 
-.name h1 {
-    margin-left: 5%;
-    margin-bottom: 3%;
-    font-weight: 900;
-    text-transform: uppercase;
-    font-size: 5em;
-    width: 100%;
+#contact h1 {
+    font-size: 3.5em;
+    font-weight: 700;
+    margin-bottom: -3px;
+    
 }
 
-.header h2 {
-    margin-left: 5%;
-    font-size: 2.5em;
+#contact h2 {
+    font-size: 1.3em;
+    color: #f69580;
 }
 
-h1 {
-    margin-bottom: 3%;
-    font-weight: 900;
-    width: 400px;
-    text-transform: uppercase;
-}
-
-h2 {
-    display: block;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: 900;
-}
-
-.contact-component {
-    width: 50%;
-    margin-left: 220px;
-    margin-right: auto;
-    padding-bottom: 50px;
+#contact a {
+    text-decoration: none;
+    color: #000;
     font-size: 1.2em;
 }
 
-.col {
-    float: left;
-    width: 50%;
-    height: 50%;
-    text-align: left;
+#contact .current a, #contact a:hover {
+    color: #94ccd6;
+    border-bottom: 2px solid #f69580;
 }
 
-.about {
-    margin-bottom: 50px;
-    padding-top: 175px;
+#contact p{
+    margin-top: 30px;
+    font-size: 1.2em;
 }
 
-.about_box_1 {
-    position: relative;
+hr {
+    width: 80%;
+
 }
 
-.about_header {
-    margin-left: 13%;
-    font-size: 3em;
+/* About */
+
+#about {
+    margin: 80px 80px;
 }
 
-.about_description {
-    margin-left: 18%;
-    width: 35%;
-}
-
-.bio, h3 {
-    color: green;
+#about h1 {
+    font-size: 2em;
     font-weight: 700;
-    font-size: 1.3em;
 }
 
-.skills {
-    position: absolute;
-    width: 20%;
-    right: 15%;
-    top: 145%;
-    text-align: right;
+/* Projects */
+
+#projects {
+    margin: 80px auto;
 }
 
-.projects {
-    margin-top: 50px;
-    margin-left: 10px;
-    
-
+#projects h1{
+    margin-bottom: 60px;
+    font-size: 2em;
 }
 
-.projects h2 {
-    text-align: left;
-    margin-left: 210px;
-}
-
-.projects_header {
-    font-size: 2.5em;
-    text-align: right;
-    margin-right: 25%;
-    margin-left: 150px;
-}
-
-.project_description h2 {
-    font-size: 1.4em;
-    
-}
-
-.project-description p {
-    margin-left: 200px;
-    
-    
-}
-
- .tech-stack {
+#projects a {
     text-decoration: none;
-    color: green;
-    margin-left: 58px;
-}
-
-.project_description a {
+    color: #000;
     font-weight: 700;
 }
 
-.project-description a:hover {
-    color: green;
-
+#projects .current a, #projects a:hover {
+    color: #94ccd6;
+    border-bottom: 2px solid #f69580;
 }
 
-a:-webkit-any-link {
-    cursor: pointer;
-}
-
-.project-picture {
-    width: 100%;
-   
-}
-
-.project-picture img {
-    height: 100%;
-    width: 50%;
-    
-}
-
-
-
-hr.solid {
-    border-top: 3px solid #bbb;
-    width: 50%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
+/* Footer */
 
 footer {
     text-align: center;
-    margin-top: 5%;
-    margin-bottom: 3%;
+    margin: 20px;
 }
