--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ img {
 }
 
 #contact h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 700;
     margin-bottom: -3px;
     
@@ -84,6 +84,7 @@ img {
 
 hr {
     width: 80%;
+    border-color: #cfbdf3;
 
 }
 
